--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -47,13 +47,13 @@ open_in_new: false
 
 # 打赏
 # 打赏type设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
-reward_type: 0
+reward_type: 2
 # 打赏wording
 reward_wording: '谢谢你请我吃糖果'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
 alipay: 
 # 微信二维码图片地址
-weixin: 
+weixin: '/assets/img/weixin.jpg'
 
 # 目录
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
@@ -72,7 +72,7 @@ google_analytics: ''
 favicon: /favicon.png
 
 #你的头像url
-avatar: https://avatars2.githubusercontent.com/u/19219954?s=460&v=4
+avatar: http://pd4brty72.bkt.clouddn.com/touxiang.jpg
 
 #是否开启分享
 share_jia: true
