--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -69,7 +69,7 @@ top: true
 # Miscellaneous
 baidu_analytics: ''
 google_analytics: ''
-favicon: /favicon.png
+favicon: '/assets/img/favicon.png'
 
 #你的头像url
 avatar: http://pd4brty72.bkt.clouddn.com/touxiang.jpg
