--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -72,7 +72,7 @@ google_analytics: ''
 favicon: '/assets/img/favicon.png'
 
 #你的头像url
-avatar: http://pd4brty72.bkt.clouddn.com/touxiang.jpg
+avatar: http://lbz-blog.test.upcdn.net/post/touxiang.jpg
 
 #是否开启分享
 share_jia: true
