修改个人简介

--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -8,7 +8,7 @@ menu:
 # SubNav
 subnav:
   github: "https://github.com/laibinzhi"
-  jianshu: "https://www.jianshu.com/u/a5feb1458cd0"
+  jianshu: "https://juejin.cn/user/1987506650767966"
   #mail: "laibinzhi@gmail.com"
   #qq: "444239383"
   #weibo: "#"
